# vulkan-path-tracer

./: .gitignore  CMakeLists.txt  README.md
assets/: floatplane.mtl
shaders/: chit.spv  closesthit.rchit  miss.rmiss  miss.spv  raygen.rgen  raygen.spv
src/: main.cpp  mesh.hpp  objLoader.cpp  objLoader.hpp
src/loader/: objLoader.cpp  objLoader.hpp
src/renderer/: acceleration.cpp  acceleration.hpp  camera.hpp  commands.cpp  commands.hpp  descriptors.cpp  descriptors.hpp  gpuScene.cpp  gpuScene.hpp  pipeline.cpp  pipeline.hpp  sbt.cpp  sbt.hpp  scene.hpp
src/shaders/: chit.spv  closesthit.rchit  miss.rmiss  miss.spv  raygen.rgen  raygen.spv  shadow.rmiss  shadowhit.rchit  shadowhit.spv  shadowmiss.spv
